--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,60 +1,40 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "start": "npx nx serve",
-    "build": "npx nx build",
-    "test": "npx nx test"
-  },
-  "private": true,
-  "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
-  },
-  "devDependencies": {
-    "@nrwl/cypress": "15.8.9",
-    "@nrwl/eslint-plugin-nx": "15.8.9",
-    "@nrwl/jest": "15.8.9",
-    "@nrwl/js": "15.8.9",
-    "@nrwl/linter": "15.8.9",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "15.8.9",
-    "@nrwl/vite": "15.8.9",
-    "@nrwl/workspace": "15.8.9",
-    "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-react": "^3.0.0",
-    "@vitest/coverage-c8": "~0.25.8",
-    "@vitest/ui": "^0.25.8",
-    "babel-jest": "^29.4.1",
-    "cypress": "^12.2.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jsdom": "~20.0.3",
-    "nx": "15.8.9",
-    "prettier": "^2.6.2",
-    "react-test-renderer": "18.2.0",
-    "ts-jest": "^29.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "~4.9.5",
-    "vite": "^4.0.1",
-    "vite-plugin-dts": "~1.7.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.25.8"
-  }
+	"name": "vite-frontend",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"lint": "eslint . --fix --max-warnings=0",
+		"format": "prettier . --write",
+		"test": "jest",
+		"coverage": "jest --coverage"
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"@types/jest": "^29.5.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.57.0",
+		"@typescript-eslint/parser": "^5.57.0",
+		"@vitejs/plugin-react-swc": "^3.0.0",
+		"eslint": "^8.37.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-jest": "^27.2.1",
+		"eslint-plugin-react": "^7.32.2",
+		"jest": "^29.5.0",
+		"jest-environment-jsdom": "^29.5.0",
+		"jest-transform-stub": "^2.0.0",
+		"prettier": "2.8.7",
+		"ts-jest": "^29.0.5",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.2.0"
+	}
 }
