--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
 		"coverage": "jest --coverage"
 	},
 	"dependencies": {
+		"localforage": "^1.10.0",
+		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.10.0",
+		"sort-by": "^1.2.0"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@types/jest": "^29.5.0",
+		"@types/node": "^18.15.11",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
