--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
 		"coverage": "jest --coverage"
 	},
 	"dependencies": {
+		"chart.js": "^3.8.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^4.3.1",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.10.0",
 		"sort-by": "^1.2.0"
