--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,5 +8,6 @@ FROM ubuntu
 RUN apt-get update
 RUN apt-get install nginx -y
 COPY --from=build /app/dist /var/www/html/
+COPY --from=build /app/nginx.conf /etc/nginx/conf.d
 EXPOSE 80
 CMD ["nginx","-g","daemon off;"]
