--- a/aws/arent-health-cloudformation-after-first-deploy.yml
+++ b/aws/arent-health-cloudformation-after-first-deploy.yml
@@ -61,7 +61,7 @@ Resources:
     Properties:
       ContainerDefinitions:
       - Command:
-        - us-east-1.compute.internal
+        - ap-southeast-1.compute.internal
         - arent-healthy-app.local
         Essential: false
         Image: docker/ecs-searchdomain-sidecar:1.0
@@ -291,7 +291,7 @@ Resources:
     Properties:
       ContainerDefinitions:
       - Command:
-        - us-east-1.compute.internal
+        - ap-southeast-1.compute.internal
         - arent-healthy-app.local
         Essential: false
         Image: docker/ecs-searchdomain-sidecar:1.0
@@ -491,7 +491,7 @@ Resources:
     Properties:
       ContainerDefinitions:
       - Command:
-        - us-east-1.compute.internal
+        - ap-southeast-1.compute.internal
         - arent-healthy-app.local
         Essential: false
         Image: docker/ecs-searchdomain-sidecar:1.0
@@ -618,7 +618,7 @@ Resources:
     Properties:
       ContainerDefinitions:
       - Command:
-        - us-east-1.compute.internal
+        - ap-southeast-1.compute.internal
         - arent-healthy-app.local
         Essential: false
         Image: docker/ecs-searchdomain-sidecar:1.0
@@ -721,7 +721,7 @@ Resources:
             Effect: Allow
             Principal: {}
             Resource:
-            - arn:aws:elasticfilesystem:us-east-1:648824198004:file-system/fs-09d9323193bf54c6c
+            - arn:aws:elasticfilesystem:ap-southeast-1:648824198004:file-system/fs-09d9323193bf54c6c
           Version: 2012-10-17
         PolicyName: PostgresDbdataVolumeMountPolicy
       Tags:
