--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
 	"private": true,
 	"version": "0.0.0",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
+		"dev": "NODE_ENV=development vite",
+		"build": "NODE_ENV=production tsc && vite build",
 		"preview": "vite preview",
 		"lint": "eslint . --fix --max-warnings=0",
 		"format": "prettier . --write",
@@ -12,22 +12,39 @@
 		"coverage": "jest --coverage"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.3",
+		"axios": "^1.3.4",
 		"chart.js": "^3.8.0",
+		"history": "^5.3.0",
+		"immutable": "^4.3.0",
 		"localforage": "^1.10.0",
+		"lodash": "^4.17.21",
 		"match-sorter": "^6.3.1",
+		"q": "^1.5.1",
+		"query-string": "^8.1.0",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^4.3.1",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.10.0",
-		"sort-by": "^1.2.0"
+		"redux": "^4.2.1",
+		"redux-immutable": "^4.0.0",
+		"redux-logger": "^3.0.6",
+		"redux-saga": "^1.2.3",
+		"reselect": "^4.1.7",
+		"sort-by": "^0.0.2"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@types/jest": "^29.5.0",
+		"@types/lodash": "^4.14.192",
 		"@types/node": "^18.15.11",
+		"@types/q": "^1.5.5",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/redux-immutable": "^4.0.3",
+		"@types/redux-logger": "^3.0.9",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
 		"@typescript-eslint/parser": "^5.57.0",
 		"@vitejs/plugin-react-swc": "^3.0.0",
