--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,8 +43,10 @@
 		"@types/q": "^1.5.5",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-redux": "^7.1.25",
 		"@types/redux-immutable": "^4.0.3",
 		"@types/redux-logger": "^3.0.9",
+		"@types/redux-saga": "^0.10.5",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
 		"@typescript-eslint/parser": "^5.57.0",
 		"@vitejs/plugin-react-swc": "^3.0.0",
